# Stats_Wiki_Dojo_plus

./: .gitignore  .quartoignore  AGENTS.md  CLAUDE.md  CLAUDE_CODE_SPEC.md  README.md  _quarto.yml  about.html  about.qmd  graph-navigation.html  graph-navigation.qmd  index.html  index.qmd  knowledge-dimensions.md  living_textbook copy.md  quarto_site_scaffold.md  robots.txt  search.json  sitemap.xml  syllabus-path.html  syllabus-path.qmd
assets/css/: styles.css
dojo/: index.html  index.qmd
dojo/datasets/: README.md
dojo/r-drills/: build-control-chart.html  build-control-chart.qmd  factorial-anova.html  factorial-anova.qmd  fill-anova-table.html  fill-anova-table.qmd  fit-regression-model.html  fit-regression-model.qmd  simulate-clt.html  simulate-clt.qmd
lessons/: index.html  index.qmd
maintenance/: HANDOFF.md  link-audit.md  log.md  style-guide.md
notes_pipeline/: CLAUDE_CODE_SPEC.md  README.md  config.example.toml  pyproject.toml
notes_pipeline/src/notes_pipeline/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  logging_setup.py  pdf.py  pipeline.py  watcher.py
notes_pipeline/src/notes_pipeline/ocr/: __init__.py  base.py  claude.py  ollama_backend.py  prompts.py  registry.py
notes_pipeline/src/notes_pipeline/vault/: __init__.py  frontmatter.py  matching.py  merge.py  mocs.py
notes_pipeline/tests/: conftest.py  test_config.py  test_extract_handwritten.py  test_frontmatter.py  test_matching.py  test_mocs.py  test_prompts.py
references/: llm-wiki.md
wiki/: CLAUDE.md  backlinks.html  backlinks.md  index.html  index.md
(+186 files in other folders)
