[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notes-pipeline"
version = "0.2.0"
description = "Annotated-PDF → Obsidian vault pipeline with pluggable OCR backends (Claude, olmOCR, Llama Vision)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Warren Ross" }]
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.39.0",
    "ollama>=0.4.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "watchdog>=4.0.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "tenacity>=8.3.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.scripts]
notes = "notes_pipeline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/notes_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
